--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /.vs/GSTINVOICE/v15/Server/sqlite3
+/GSTINVOICE/bin/Debug
