--- a/GSTINVOICE/GSTINVOICE.csproj
+++ b/GSTINVOICE/GSTINVOICE.csproj
@@ -63,12 +63,6 @@
     <Compile Include="AddCustomerFrm.Designer.cs">
       <DependentUpon>AddCustomerFrm.cs</DependentUpon>
     </Compile>
-    <Compile Include="AddProduct.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="AddProduct.Designer.cs">
-      <DependentUpon>AddProduct.cs</DependentUpon>
-    </Compile>
     <Compile Include="FrmCategory.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -87,10 +81,10 @@
     <Compile Include="FrmCreateGSTINVOICE.Designer.cs">
       <DependentUpon>FrmCreateGSTINVOICE.cs</DependentUpon>
     </Compile>
-    <Compile Include="GSTInvoiceDataSet.Designer.cs">
+    <Compile Include="GSTDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>GSTInvoiceDataSet.xsd</DependentUpon>
+      <DependentUpon>GSTDataSet.xsd</DependentUpon>
     </Compile>
     <Compile Include="HelperClass.cs" />
     <Compile Include="LoginForm.cs">
@@ -107,6 +101,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SelectCategory.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SelectCategory.Designer.cs">
+      <DependentUpon>SelectCategory.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="AddCategory.resx">
       <DependentUpon>AddCategory.cs</DependentUpon>
     </EmbeddedResource>
@@ -115,9 +115,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AddCustomerFrm.resx">
       <DependentUpon>AddCustomerFrm.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="AddProduct.resx">
-      <DependentUpon>AddProduct.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmCategory.resx">
       <DependentUpon>FrmCategory.cs</DependentUpon>
@@ -140,16 +137,19 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <None Include="GSTInvoiceDataSet.xsc">
-      <DependentUpon>GSTInvoiceDataSet.xsd</DependentUpon>
+    <EmbeddedResource Include="SelectCategory.resx">
+      <DependentUpon>SelectCategory.cs</DependentUpon>
+    </EmbeddedResource>
+    <None Include="GSTDataSet.xsc">
+      <DependentUpon>GSTDataSet.xsd</DependentUpon>
     </None>
-    <None Include="GSTInvoiceDataSet.xsd">
+    <None Include="GSTDataSet.xsd">
       <Generator>MSDataSetGenerator</Generator>
-      <LastGenOutput>GSTInvoiceDataSet.Designer.cs</LastGenOutput>
+      <LastGenOutput>GSTDataSet.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </None>
-    <None Include="GSTInvoiceDataSet.xss">
-      <DependentUpon>GSTInvoiceDataSet.xsd</DependentUpon>
+    <None Include="GSTDataSet.xss">
+      <DependentUpon>GSTDataSet.xsd</DependentUpon>
     </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -167,9 +167,6 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="GSTInvoice.mdb">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
     <Content Include="Images\47812606-5d7d-4c14-a28e-0c0bdfb2cc4f.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
