--- a/GSTINVOICE/App.config
+++ b/GSTINVOICE/App.config
@@ -4,10 +4,10 @@
   </configSections>
   <connectionStrings>
     <add name="ApplicationForm.Properties.Settings.CMSMDataNewConnectionString"
-      connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=&quot;|DataDirectory|\GST.mdb&quot;"
+      connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=&quot;d:\GST.mdb&quot;"
       providerName="System.Data.OleDb" />
     <add name="GSTINVOICE.Properties.Settings.GSTConnectionString"
-      connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\GST.mdb"
+      connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=d:\GST.mdb"
       providerName="System.Data.OleDb" />
   </connectionStrings>
     <startup> 
