--- a/GSTINVOICE/GSTINVOICE.csproj
+++ b/GSTINVOICE/GSTINVOICE.csproj
@@ -55,6 +55,9 @@
     <Reference Include="System" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Net" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Net.Http.WebRequest" />
     <Reference Include="System.Web.Services" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -155,6 +158,7 @@
     <Compile Include="SelectCategory.Designer.cs">
       <DependentUpon>SelectCategory.cs</DependentUpon>
     </Compile>
+    <Compile Include="SmtpServer.cs" />
     <Compile Include="ViewInvoiceDetail.cs">
       <SubType>Form</SubType>
     </Compile>
